<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verify_code_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/watchlist_bg_gradient"
    tools:context=".ui.common.VerifyCodeActivity">

    <TextView
        android:id="@+id/verify_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/admin_verifycode_title"
        android:textSize="@dimen/h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verify_code_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/admin_verifycode_subtext"
        android:textSize="@dimen/p_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_code_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verify_code_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Verification Code"
        android:inputType="text"
        android:padding="@dimen/input_field_padding"
        android:textColor="@color/PrimaryButtonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_code_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verify_code_edittext_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PrimaryButtonColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/verify_code_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_start"
        android:text="@string/user_select_country_button"
        android:textAllCaps="false"
        android:textSize="@dimen/p"
        app:cornerRadius="@dimen/input_field_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_code_edittext" />

    <ProgressBar
        android:id="@+id/verify_code_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>